...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yrb-AE-UJs" userLabel="Record">
                                <rect key="frame" x="82.5" y="193.5" width="155" height="155"/>
                                <state key="normal" image="Record"/>
...
                                    <constraint firstAttribute="height" constant="64" id="udc-ai-mgg"/>
                                </constraints>
                                <state key="normal" image="Stop"/>
                                <connections>
                                    <action selector="stopRecording:" destination="BYZ-38-t0r" eventType="touchUpInside" id="oux-F2-xgM"/>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="R9g-8E-yoQ" userLabel="Slow Button">
                                                <rect key="frame" x="0.0" y="0.0" width="144" height="138.5"/>
                                                <state key="normal" image="Slow"/>
                                                <connections>
                                                    <action selector="playSoundForButton:" destination="ROW-qu-YfD" eventType="touchUpInside" id="Jso-uw-132"/>
...
                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4d1-2a-Q1y" userLabel="Fast Button">
                                                <rect key="frame" x="144" y="0.0" width="144" height="138.5"/>
                                                <state key="normal" image="Fast"/>
                                                <connections>
                                                    <action selector="playSoundForButton:" destination="ROW-qu-YfD" eventType="touchUpInside" id="58x-LM-VnP"/>
...
                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ErO-2c-SFc" userLabel="High Pitch Button">
                                                <rect key="frame" x="0.0" y="0.0" width="144" height="139"/>
                                                <state key="normal" image="HighPitch"/>
                                                <connections>
                                                    <action selector="playSoundForButton:" destination="ROW-qu-YfD" eventType="touchUpInside" id="d4H-4v-5nR"/>
...
                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TGF-1r-I8w" userLabel="Low Pitch Button">
                                                <rect key="frame" x="144" y="0.0" width="144" height="139"/>
                                                <state key="normal" image="LowPitch"/>
                                                <connections>
                                                    <action selector="playSoundForButton:" destination="ROW-qu-YfD" eventType="touchUpInside" id="rJQ-vL-6S2"/>
...
                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uy2-C7-HgD" userLabel="Echo Button">
                                                <rect key="frame" x="0.0" y="0.0" width="144" height="138.5"/>
                                                <state key="normal" image="Echo"/>
                                                <connections>
                                                    <action selector="playSoundForButton:" destination="ROW-qu-YfD" eventType="touchUpInside" id="G3V-gj-qww"/>
...
                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="mql-aT-OtF" userLabel="Reverb Button">
                                                <rect key="frame" x="144" y="0.0" width="144" height="138.5"/>
                                                <state key="normal" image="Reverb"/>
                                                <connections>
                                                    <action selector="playSoundForButton:" destination="ROW-qu-YfD" eventType="touchUpInside" id="1IR-sS-lam"/>
...
